<resources>
    <string name="manage_wallet">管理钱包</string>
    <string name="address_manage">地址管理</string>
    <string name="about_us">关于我们</string>
    <string name="share_friends">分享好友</string>
    <string name="add_community">加入社区</string>
    <string name="help_center">帮助中心</string>
    <string name="system_setting">系统设置</string>
    <string name="login_out">退出身份</string>
    <string name="assets">资产</string>
    <string name="market">市场</string>
    <string name="manage">管理</string>
    <string name="my">我的</string>
    <string name="my_token">我的代币</string>
    <string name="my_pass_code">我的通证</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">扫一扫</string>
    <string name="everi_pay">付款</string>
    <string name="collect">收款</string>
    <string name="issue">发行</string>
    <string name="tv_return">返回</string>
    <string name="wallet">钱包</string>
    <string name="now_user_wallet">当前身份下的钱包</string>
    <string name="import_wallet">导入的钱包</string>
    <string name="search">搜索</string>
    <string name="all">全部</string>
    <string name="choose_group">选择组</string>
    <string name="add_address">新增地址</string>
    <string name="import_address">导入地址</string>
    <string name="export">导出</string>
    <string name="please_use_same_wallet_scan">仅用于面对面交易</string>
    <string name="pay_code">付款码</string>
    <string name="sweep_code_payment">扫码支付</string>
    <string name="address">地址</string>
    <string name="max_pay">最大支付数量：</string>
    <string name="choose_this_way_to_pay">选择此方式进行付款</string>
    <string name="click_qrcode_to_copy_address">点击二维码复制地址</string>
    <string name="type">类型</string>
    <string name="please_input_address">请输入地址</string>
    <string name="group_name">组名</string>
    <string name="please_input_group_name">请输入组名</string>
    <string name="name">名称</string>
    <string name="please_input_name">请输入名称</string>
    <string name="phone">电话</string>
    <string name="please_input_phone">请输入联系电话</string>
    <string name="remark">备注</string>
    <string name="please_input_notes">请输入备注</string>
    <string name="save">保存</string>
    <string name="import_address_msg">数据格式：类型、地址、组名、名称、电话、备注\n一地址一行</string>
    <string name="Paste_the_address_here">在这里粘贴地址</string>
    <string name="copy_content">复制内容</string>
    <string name="languages">选择语言</string>
    <string name="currency_setting">资产折合单位</string>
    <string name="node_setting">节点设置</string>
    <string name="max_service_fee">设置手续费最大值</string>
    <string name="max_payment">设置最大支付金额</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="the_service_fee_can_not_be_empty">服务费不能为空</string>
    <string name="need_camerl_permission">需要相机权限</string>
    <string name="issue_fts">发行代币</string>
    <string name="issue_fts_msg">适合积分、点数、标准化资产等</string>
    <string name="issue_nfts">发行通证</string>
    <string name="issue_nfts_msg">适合票据、房产等具有唯一性的资产/权益</string>
    <string name="change_pwd">修改密码</string>
    <string name="retrieve_pwd">找回密码</string>
    <string name="export_mnemonic_code">导出助记词</string>
    <string name="add_id_wallet">增加身份钱包</string>
    <string name="erit_id_wallet">编辑身份钱包</string>
    <string name="current_pwd">当前密码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="confirm_changes">确认修改</string>
    <string name="Immediate_import">立即导入</string>
    <string name="change_pwd_msg">忘记密码？导入助记词或私钥进行回复。</string>
    <string name="import_wallet_msg">请输入备份的钱包助记词(12个英文单词)，按空格分割</string>
    <string name="retrieve_pwd_msg">此软件不存储用户密码，无法提供找回或重置功能。如果忘记密码，用户只能通过自己备份的钱包私钥或助记词，重新导入后设置新密码。\n如果您的钱包是没有助记词的，您可以先创建一个新身份，然后通过私钥导入钱包。</string>
    <string name="wallet_import">导入钱包</string>
    <string name="Be_careful">注意！</string>
    <string name="export_mnemonic">拥有钱包私钥就能完全控制钱包资产，因此强烈建议你在使用钱包前做好备份，将钱包私钥保存到安全的地方。</string>
    <string name="back_up">立即备份</string>
    <string name="import_note">重要提示！</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="can_not_be_empty">不能为空</string>
    <string name="next">下一步</string>
    <string name="plese_remember_mnemonic">请记下你的钱包助记词并保存到安全的地方。</string>
    <string name="wallet_mnemonic_can_contral">钱包助记词用于恢复钱包资产，拥有助记词即可完全控制钱包资产，请务必妥善保管，丢失助记词即丢失钱包资产。本软件无法提供找回功能。</string>
    <string name="check_your_wallet_code">验证你的钱包助记词</string>
    <string name="according_to_the_mnemonics_you_have_written_down">请根据你记下的助记词，按顺序点击，验证你备份的助记词正确无误。</string>
    <string name="export_priate_key">导出私钥</string>
    <string name="setting_up_sign">设置多签</string>
    <string name="wallet_name">钱包名称</string>
    <string name="export_private_key_msg">拥有私钥就能完全控制该地址的资产，不要分享给任何人。</string>
    <string name="here_is_your_address_and_private_key">以下是您的地址和私钥，点击可复制</string>
    <string name="private_key">私钥</string>
    <string name="export_key">导出Keystore</string>
    <string name="please_copy_keystore_to_save">请复制粘贴Keystore文件到安全、离线到地方保存。\n切勿保存至邮箱、记事本、网盘、聊天工具、非常危险。</string>
    <string name="please_dont_use_internet">请勿使用网络传输</string>
    <string name="please_dont_use_internet_msg">请勿通过网络工具传输Keystore文件，一旦被黑客获取将造成不可挽回到资产损失，建议离线设备通过扫描二维码方式传输。</string>
    <string name="pwd_save_deposit">密码保险箱保存</string>
    <string name="pwd_save_deposit_msg">如需在线保存，则建议使用安全登记更高1password等密码保管软件保存Keystore。</string>
    <string name="copy_keystore">复制Keystore</string>
    <string name="please_choose_wallet_type">请选择钱包类型</string>
    <string name="evt_wallet">everiToken钱包</string>
    <string name="eth_wallet">ETH钱包</string>
    <string name="eos_wallet">EOS钱包</string>
    <string name="mnemonic">助记词</string>
    <string name="pwd">密码</string>
    <string name="comfire_pwd">确认密码</string>
    <string name="please_input_private_key_content">请输入私钥文本内容</string>
    <string name="keystore_pwd">Keystore密码</string>
    <string name="Copy_and_paste_the_contents_of_the_wallet_Keystore_file_directly_into_the_input_box">直接复制粘贴钱包Keystore文件内容至输入框</string>
    <string name="now_version">当前版本</string>
    <string name="check_version">检测版本</string>
    <string name="you_need_pay_currency">您需要付款的币种为：</string>
    <string name="you_need_collect_currency">您需要收款的币种为：</string>
    <string name="sum_of_money">数量</string>
    <string name="please_input_money">请输入数量</string>
    <string name="please_choose_need_money">请选择需要收款的金额</string>
    <string name="confirm_collect">确认收款</string>
    <string name="please_choose_how_to_pay">请选择进行付款的代币</string>
    <string name="trade_success">交易成功</string>
    <string name="pay">付款</string>
    <string name="index">首页</string>
    <string name="number">数量</string>
    <string name="choose_address">选择地址</string>
    <string name="please_input_every_address_money">请输入每个地址转账金额</string>
    <string name="batch_set">批量设置</string>
    <string name="address_number">地址个数：</string>
    <string name="domain_number">个数：</string>
    <string name="transfer_address">转账地址</string>
    <string name="all_choose">全选</string>
    <string name="batch_transfers">批量转账</string>
    <string name="transfer">转账</string>
    <string name="confirm_transfer">确认转账</string>
    <string name="choose_fts">选择代币</string>
    <string name="CreateFts">创建代币</string>
    <string name="submit">提交</string>
    <string name="authority">权限</string>
    <string name="icon">图标(建议180*180)</string>
    <string name="please_input_full_name">请输入代币全称</string>
    <string name="coin_full_name">代币全称</string>
    <string name="please_input_decimals">请输入精度</string>
    <string name="decimals">精度(精度位数最多为18位)</string>
    <string name="enter_the_total_number">请输入发行总量</string>
    <string name="total_supply">发行总量</string>
    <string name="enter_the_asset_number">请输入资产编号</string>
    <string name="asset_number">资产编号</string>
    <string name="enter_the_symbol">请输入符号(必须是大写字母)</string>
    <string name="coin_symbol">代币简称</string>
    <string name="please_choose_address">请选择地址进行付款</string>
    <string name="please_choose_currency_and_money">请选择付款币种及数量</string>
    <string name="balance">余额</string>
    <string name="enter_remarks">请输入备注</string>
    <string name="threshold">阈值</string>
    <string name="metadata">元数据</string>
    <string name="authority_setting">权限设置</string>
    <string name="only_i_can_issue">只有我能发行</string>
    <string name="manual_edit_content">手动编辑内容</string>
    <string name="change">转移</string>
    <string name="edit">编辑</string>
    <string name="create_now">立即创建</string>
    <string name="my_nfts">我的通证</string>
    <string name="create_nfts">创建通证</string>
    <string name="only_i_and_have_can_change">只有我和持有者能转移</string>
    <string name="nfts">通证</string>
    <string name="please_input">请输入</string>
    <string name="only_i_can_manage">只有我能管理</string>
    <string name="create_nfts_name_msg">您可以在此动手输入通证名称，用回车键分割；如果需要快捷地批量发行多个通证，可使用批量生成功能</string>
    <string name="please_input_batch_name">请输入批量通证名称</string>
    <string name="controller">管理者</string>
    <string name="I_am_in_charge_of_management">我负责管理</string>
    <string name="group_structure">组结构</string>
    <string name="node">节点</string>
    <string name="create_group">创建组</string>
    <string name="my_groups">我的组</string>
    <string name="from_adress_book_choose">从地址本选择</string>
    <string name="hand_input_pub_key">手动输入公钥</string>
    <string name="new_note">新建节点</string>
    <string name="key">Key</string>
    <string name="weight">权重</string>
    <string name="enter_the_json_address">请在下方输入json地址</string>
    <string name="please_input_pub_key">请输入公钥</string>
    <string name="input_pub_key">输入公钥</string>
    <string name="batch_create_nfts_name">批量生成通证名称</string>
    <string name="batch_create">批量生成</string>
    <string name="add_fts_symbol_not_empty">代币简称不能为空</string>
    <string name="add_fts_symbol_id_not_empty">资产编号不能为空</string>
    <string name="add_fts_count_not_null">发行总量和精度不能为空</string>
    <string name="add_fts_full_name_not_null">代币全称不能为空</string>
    <string name="password_error">密码错误</string>
    <string name="copy_success">已复制</string>
    <string name="issue_nfts_success">发行成功</string>
    <string name="password_not_equals">两次输入密码不一致</string>
    <string name="set_max_money">请输入最大金额</string>
    <string name="import_success">创建成功</string>
    <string name="recovery_success">导入成功</string>
    <string name="create_id">创建身份</string>
    <string name="recover_id">恢复身份</string>
    <string name="create">立即创建</string>
    <string name="recover">立即恢复</string>
    <string name="no_function">此功能暂未开放</string>
    <string name="count">总量</string>
    <string name="surplus">剩余</string>
    <string name="circulation">发行量</string>
    <string name="select_pay">请选择币种进行付款</string>
    <string name="collect_code">收款码</string>
    <string name="scan_collect">扫码收款</string>
    <string name="zanbubeifen">暂不备份</string>
    <string name="transaction_record">交易记录</string>
    <string name="start_touch_id_unlock">开通钱包指纹解锁</string>
    <string name="input_password">输入密码</string>
    <string name="please_check_finger">请验证指纹解锁</string>
    <string name="property">property</string>
    <string name="Fingerprint_authentication_failed_please_try_again">指纹认证失败，请再试一次</string>
    <string name="switch_success">切换成功!</string>
    <string name="repress_Exit">再按一次退出</string>
    <string name="transaction_success">交易成功</string>
    <string name="domain">域</string>
    <string name="Automatic_refresh_every_5_seconds">每5秒自动刷新一次</string>
    <string name="owner">所有者</string>
    <string name="no_fts">未持有代币</string>
    <string name="operation_success">操作成功</string>
    <string name="symbol_id_too_long">资产编号过长</string>
    <string name="issue_success">发行成功</string>
    <string name="payee">收款方</string>
    <string name="memo">备注</string>
    <string name="fees">转账手续费</string>
    <string name="choose_currency_for_pay">请选择币种进行付款</string>
    <string name="payer">付款方</string>
    <string name="copyed_please_search">复制成功，请到微信搜索</string>
    <string name="Password_must_not_be_less_than_8_bits">密码不能少于8位</string>
</resources>