<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5">

    <include layout="@layout/normal_toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_choose_wallet_type"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/color_33"/>

    <TextView
        android:id="@+id/tv_evt"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/shape_4d_3"
        android:gravity="center"
        android:text="@string/evt_wallet"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_eth"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/shape_4d_3"
        android:gravity="center"
        android:text="@string/eth_wallet"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_eos"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/shape_4d_3"
        android:gravity="center"
        android:text="@string/eos_wallet"
        android:textColor="@color/white" />
</LinearLayout>