<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/normal_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/shadow_circle"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/coin_symbol"
                    android:textColor="@color/color_33"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:hint="@string/enter_the_symbol"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view_line3"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_cc" />


                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/asset_number"
                    android:textColor="@color/color_33"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="10dp"
                    android:inputType="number"
                    android:background="@null"
                    android:hint="@string/enter_the_asset_number"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view_line4"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_cc" />


                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/total_supply"
                    android:textColor="@color/color_33"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_issue_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:inputType="number"
                    android:hint="@string/enter_the_total_number"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view_line5"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_cc" />


                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/decimals"
                    android:textColor="@color/color_33"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_decimals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="10dp"
                    android:inputType="number"
                    android:background="@null"
                    android:hint="@string/please_input_decimals"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view_line6"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_cc" />

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/coin_full_name"
                    android:textColor="@color/color_33"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:hint="@string/please_input_full_name"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view_line7"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_cc" />

                <TextView
                    android:id="@+id/text6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/icon"
                    android:textColor="@color/color_33"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_img"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_add_img" />

                <View
                    android:id="@+id/view_line8"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_cc" />

                <TextView
                    android:id="@+id/text7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/authority"
                    android:textColor="@color/color_33"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/tv_permission"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_line_3_68"
                    android:drawableEnd="@drawable/ic_permission_choose"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    tools:text="只有我能发行，权限不可更改" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/shape_3137_4"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/color_e4" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
