<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5"
    tools:context=".ui.activity.index.ChangePwdActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/normal_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:orientation="vertical"
        android:background="@drawable/shadow_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/et_current"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_line_3_bb"
            android:layout_margin="14dp"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:hint="@string/current_pwd"
            android:textColorHint="@color/color_bb"
            android:textColor="@color/color_33"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_line_3_bb"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:paddingStart="16dp"
            android:inputType="textPassword"
            android:paddingEnd="12dp"
            android:hint="@string/new_pwd"
            android:textColorHint="@color/color_bb"
            android:textColor="@color/color_33"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_new_pwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape_line_3_bb"
            android:layout_margin="14dp"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:hint="@string/confirm_new_pwd"
            android:textColorHint="@color/color_bb"
            android:textColor="@color/color_33"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:text="@string/change_pwd_msg"
        android:textColor="@color/color_68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout2" />

    <TextView
        android:id="@+id/tv_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/color_4d7b"
        android:text="@string/Immediate_import"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/shape_3137_4"
        android:gravity="center"
        android:text="@string/confirm_changes"
        android:textColor="@color/color_e4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_import" />

</android.support.constraint.ConstraintLayout>